--- a/src/default.scss
+++ b/src/default.scss
@@ -1,1 +1,5 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+body{
+    margin: 0;
+    padding: 0;
+}
