--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,20 +1,34 @@
-header{
-    display: flex;
+nav{
+    margin: 0;
     position: fixed;
     z-index: 90;
     width: 100vw;
-    img.logo{
-        height: 30px;
+    color: white;
+    mix-blend-mode: difference;
+    font-family: 'Space Mono', monospace;
+    font-weight: 400;
+
+    font-size: 1.2rem;
+    @media screen and (max-width: 700px) {
+        font-size: 1rem;
     }
-    ul{
+    @media screen and (max-width: 400px) {
+        font-size: 0.8rem;
+    }
+    img.logo{
+        min-width: 80px;
+        max-width: 200px;
+        width:20%;
+        justify-self: center;
+    
+    }
+    ul.menu-principal{
         margin-top: 0;
         
         padding: 0;
         display: flex;
-        color: white;
-        font-family: 'Space Mono', monospace;
-        font-weight: 400;
-        font-size: 1.2rem;
+      
+  
         list-style-type: none;
         width: 100%;
 
@@ -23,19 +37,67 @@ header{
         justify-content: space-between;
        
         
-      
         li{
-            display: block;
-            flex: 0 1 auto; /* Default */
             list-style-type: none;
             padding: 20px 5% 0% 5%;
-
+            margin: 0;
+            @media screen and (max-width: 700px) {
+                padding: 20px 5% 0% 5%;
+                margin-bottom: 10px;
+            }
+        }
+        li.menu-principal-list{
+            display: flex;
+            justify-content: center;
         }
 
        
         a{
             color: white;
+            mix-blend-mode: difference;
             text-decoration: none;
         }
+        button{
+            background: none;
+            color: inherit;
+            border: none;
+            padding: 0;
+            margin: 0;
+            font: inherit;
+            cursor: pointer;
+            
+        }
+    }
+
+
+    ul.menu-secondary{
+       position: absolute;
+        margin-top: 0;
+        padding: 0;
+        li{
+            margin-top: 0;
+            padding: 0; 
+           
+        }
+        .menu-button:hover{
+            color: red;
+        }
+        @media screen and (max-width: 700px) {
+            margin-top: 10px;
+        }
+    }
+    div.nav-item{
+     
+        margin: 0;
+        padding: 0;
+
+        
+    }
+    .menu-button:hover{
+        color: red;
+    }
+    button{
+
     }
 }
+
