--- a/src/components/HomeComponents/Hero/styles.scss
+++ b/src/components/HomeComponents/Hero/styles.scss
@@ -1,12 +1,11 @@
 section.hero{
-    display: block;
-
-  
-  
+    display: flex;
     background-color: black;
     position: relative;
     
-
+    @media screen and (max-width: 700px) {
+            justify-content: center;
+    }
     div.hero-logo{
         display: block;
         position: absolute;
@@ -18,12 +17,20 @@ section.hero{
         background-position: 20%;
     }
     img.hero-img{
-        display: block;
+   
         position: relative;
         height: 100%;
-        z-index: 9;
+        max-width: 69%;
         margin-left: 20%;
-      
+        z-index: 9;
+        object-fit: cover;
+        
+        @media screen and (max-width: 700px) {
+            margin-left: 0;
+            margin-top: 0%;
+            max-width: 80%;
+            max-height: 80%;
+        }
 
 
         
