--- a/src/components/HomeComponents/CollectionsHome/CollectionDigital/styles.scss
+++ b/src/components/HomeComponents/CollectionsHome/CollectionDigital/styles.scss
@@ -3,6 +3,11 @@ section.digital-collection{
     height: 100%;
     width: 100%;
     overflow: hidden;
+    @media screen and (max-width: 700px) {
+       
+        
+        justify-content: center;
+    }
     div.wrapper{
         display: flex;
         position: relative;
@@ -12,7 +17,7 @@ section.digital-collection{
         
         align-items: center;
     }
-    h1{
+    h1.digital-collection-title{
         position: absolute;
         clear: both;
         display: inline-block;
@@ -27,4 +32,47 @@ section.digital-collection{
    
       
     }
+    div.photoframe{
+        position: absolute;
+        height: 400px;
+        width: 300px;
+        
+       img{
+           height: 10px;
+           margin-top: 2px;
+           margin-left: 2px;
+        
+           mix-blend-mode: exclusion;
+        }
+ 
+    }
+    div.photoframe-group{
+        position: absolute;
+        margin-top: 10%;
+        display: flex;
+       
+        margin-left: 20%;
+        @media screen and (max-width: 700px) {
+            margin-top: 20%;
+            margin-left: calc(20% - 400px);
+            
+        
+        }
+    
+    }
+
+    div.mobile-device{
+        margin-left: calc(100% - 500px);
+        margin-top: calc(100vh - 400px);
+        
+        @media screen and (max-width: 700px) {
+            margin-top: 0;
+            margin-left: 0;
+            margin-top: calc(100vh - 300px);
+        
+        }
+    }
+
+
+
 }
