--- a/src/components/HomeComponents/CollectionsHome/CollectionComputer/styles.scss
+++ b/src/components/HomeComponents/CollectionsHome/CollectionComputer/styles.scss
@@ -20,11 +20,12 @@ section.computer-collection{
     div.photoframe{
         height: 400px;
         width: 300px;
-        
+        display: flex;
+        justify-content: end;
        img{
            height: 10px;
            margin-top: 2px;
-           margin-left: 2px;
+           margin-right: 2px;
         
            mix-blend-mode: exclusion;
         }
