--- a/src/components/HomeComponents/CollectionsHome/CollectionDigital/styles.scss
+++ b/src/components/HomeComponents/CollectionsHome/CollectionDigital/styles.scss
@@ -36,11 +36,12 @@ section.digital-collection{
         position: absolute;
         height: 400px;
         width: 300px;
-        
+        display: flex;
+        justify-content: end;
        img{
            height: 10px;
            margin-top: 2px;
-           margin-left: 2px;
+           margin-right: 2px;
         
            mix-blend-mode: exclusion;
         }
