--- a/src/components/HomeComponents/CollectionsHome/CollectionComputer/styles.scss
+++ b/src/components/HomeComponents/CollectionsHome/CollectionComputer/styles.scss
@@ -1,14 +1,19 @@
 
 section.computer-collection{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+
+    display: flex;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
     div.container-left{
-        grid-column: 1 / 1;
+        height: 100%;
+        width: 50%;
         background-color: black;
     }
 
     div.container-right{
-        grid-column: 2 / 2;
+        height: 100%;
+        width: 50%;
         display: flex;
         justify-content: end;
         img{
@@ -17,21 +22,37 @@ section.computer-collection{
         }
       
     }
-    div.photoframe{
+  
+    div .photoframe1{
+        position: absolute;
+        margin-left: calc(40% - 300px);
+        margin-top: calc(90vh - 400px);
+        z-index: 1;
+    }
+
+    div .photoframe2{
+        position: absolute;
         height: 400px;
         width: 300px;
-        display: flex;
-        justify-content: end;
-       img{
-           height: 10px;
-           margin-top: 2px;
-           margin-right: 2px;
+        margin-left: calc(40% - 300px);
+        margin-top: calc(90vh - 400px);
+        z-index: 2;
         
-           mix-blend-mode: exclusion;
-        }
-    
     }
-    div.photoframe-wrapper{
 
+    div .photoframe3{
+        position: absolute;
+        height: 400px;
+        width: 300px;
+        z-index: 3;
+        margin-left: calc(40% - 300px);
+        margin-top: calc(90vh - 400px);
+        
+
+    }
+
+    div.mobile-device{
+
+        z-index: 10;
     }
 }
