--- a/src/components/mobile/styles.scss
+++ b/src/components/mobile/styles.scss
@@ -2,7 +2,7 @@ div.mobile-device{
     position: absolute;
    
     width: 380px;
-    height: 200px;
+   
     background-color: #CEFFFC;
     color: black;
     font-family: 'Press Start 2P', cursive;
@@ -64,6 +64,7 @@ div.mobile-device{
         
         p.message{
             font-size: 0.8rem;
+            line-height: 1.1rem;
         }
         p.question{
             margin-top: 30px;
@@ -76,7 +77,7 @@ div.mobile-device{
         justify-content: space-between;
         font-size: 1.2rem;
         margin-top: 30px;
-        margin-bottom: 15px;
+        
         button{
             background: none;
             color: inherit;
